# pepsicode

./: .gitignore  .pre-commit-config.yaml  LICENSE  ONBOARDING.md  README.md  bench_optim.py  pyproject.toml  smoke_test.py  test_chinese_input.py  test_integration.py  test_optim.py  test_run.py  test_streaming.py  visual_test.py
.github/workflows/: ci.yml
benchmarks/: benchmark_results.txt  multi_round_stress_test.py  performance_benchmark.py
docs/: CONTRIBUTING.md
docs/reports/: COMPLETION_REPORT.md  CORECODER_OPTIMIZATION_REPORT.md  FINAL_AUDIT_REPORT.md  INTEGRATION_GUIDE.md  NEW_FEATURES_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PLATFORM_AUDIT.md  PROGRESS_REPORT.md  STRESS_TEST_REPORT.md  THIRD_ROUND_AUDIT_REPORT.md  USAGE_GUIDE.md
docs/superpowers/plans/: 2026-04-05-functional-completeness-test.md  2026-04-05-ux-enhancement.md
docs/superpowers/specs/: 2026-04-05-functional-completeness-test-design.md  2026-04-05-ux-enhancement-design.md
pepsicode/: __init__.py  agent_loop.py  anthropic_adapter.py  api_retry.py  async_context.py  auto_mode.py  background_tasks.py  cli_commands.py  config.py  context_manager.py  cost_tracker.py  file_review.py  history.py  hooks.py  install.py  logging_config.py  loop_engine.py  main.py  manage_cli.py  mcp.py  memory.py  memory_store.py  mock_model.py  permissions.py  poly_commands.py  prompt.py  session.py  skills.py  state.py  sub_agents.py  task_tracker.py  tooling.py  tty_app.py  types.py  workspace.py
pepsicode/tools/: __init__.py  api_tester.py  ask_user.py  code_nav.py  code_review.py  db_explorer.py  diff_viewer.py  docker_helper.py  edit_file.py  file_tree.py  git.py  governance_audit.py  governance_audit_tool.py  grep_files.py  list_files.py  load_skill.py  modify_file.py  multi_edit.py  notebook_edit.py  patch_file.py  read_file.py  run_command.py  run_with_debug.py  save_memory.py  task.py  test_runner.py  todo_write.py  web_fetch.py  web_search.py  write_file.py
pepsicode/tui/: __init__.py  chrome.py  input.py  input_parser.py  markdown.py  screen.py  transcript.py
tests/: test_agent_loop.py  test_anthropic_adapter.py  test_budget_guard.py  test_cli_commands.py  test_config.py  test_functional_completeness.py  test_integration.py  test_loop_engine.py  test_mcp.py  test_mock_model.py  test_new_features.py  test_optimizations.py  test_permissions.py  test_prompt.py  test_session.py  test_skills.py  test_tools.py  test_tty_app.py  test_tui.py
