[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepsicode"
version = "0.1.0"
description = "pepsicode, a lightweight terminal coding assistant for local development workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psycopg2-binary>=2.9"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
pepsicode = "pepsicode.main:main"
pepsicode-py = "pepsicode.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["pepsicode"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
