[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepsicode"
version = "0.1.0"
description = "pepsicode, a lightweight terminal coding assistant for local development workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psycopg2-binary>=2.9"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
pepsicode = "pepsicode.main:main"
pepsicode-py = "pepsicode.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",    # line length — formatter handles this
    "E402",    # module import not at top — intentional in some files
    "E712",    # equality comparison to True/False — test patterns
    "B904",    # raise without from — verbose, not always needed
    "B905",    # zip without strict — too strict for general use
    "B007",    # unused loop variable — common pattern
    "B023",    # loop variable binding in lambda — common pattern
    "B028",    # no explicit stacklevel — not critical
    "B011",    # assert false — test pattern
    "SIM101",  # duplicate isinstance — can merge but not critical
    "SIM102",  # collapsible if — readability preference
    "SIM103",  # needless bool — readability preference
    "SIM105",  # contextlib.suppress — stylistic preference
    "SIM108",  # if-else instead of ternary — readability preference
    "SIM112",  # env var naming — legacy naming, not worth renaming now
    "SIM222",  # expr-or-true — stylistic
    "N802",    # function name should be lowercase — test helper names
    "N803",    # invalid argument name — too strict
    "N806",    # non-lowercase in function — common naming
    "N815",    # mixed-case in class scope — common in frameworks
    "UP007",   # use X | Y — not urgent
    "UP035",   # deprecated import — still works fine
    "UP038",   # use X | Y in isinstance — readability preference
    "UP042",   # replace str enum — not urgent
    "F841",    # unused variable — sometimes intentional
]

[tool.ruff.lint.per-file-ignores]
"test_integration.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["pepsicode"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
